force-app/main/default/objects/Account/fields/Sym_Created_in_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Sym_Created_in_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created in Salesforce</label>
    <type>Checkbox</type>
</CustomField>