force-app/main/default/objects/Account/fields/Sym_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_of_Employees__c</fullName>
    <description>This is used for the Symphony POC and matches the pick list on the broker portal.</description>
    <label>Number of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>51-99</fullName>
            </value>
            <value>
                <fullName>100-249</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>