force-app/main/default/objects/Account/fields/Sym_recRequest__c.field-meta.xml
<CustomField>
    <fullName>Sym_recRequest__c</fullName>
    <description>To be deleted and holds the JSON data for the rec request</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Symphony recRequest</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>