force-app/main/default/objects/Account/fields/Sym_roster__c.field-meta.xml
<CustomField>
    <fullName>Sym_roster__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Symphony roster</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>