force-app/main/default/objects/Account/fields/Sym_Stndrd_Industrial_Classificatin__c.field-meta.xml
<CustomField>
    <fullName>Sym_Stndrd_Industrial_Classificatin__c</fullName>
    <label>Standard Industrial Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0831 FOREST PRODUCTS</fullName>
            </value>
            <value>
                <fullName>2085 DISTILLED &amp; BLENDED LIQUORS</fullName>
            </value>
            <value>
                <fullName>5072 HARDWARE</fullName>
            </value>
            <value>
                <fullName>5082 CONSTRUCTION &amp; MINING MACHINE</fullName>
            </value>
            <value>
                <fullName>8211 Services</fullName>
                <label>8211 SERVICES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>